// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bash completion script > matches snapshot for stability 1`] = `
"# bitbank bash completion. Generated by 'bitbank completion bash'.
# Install: bitbank completion bash >> ~/.bashrc.d/bitbank-completion.sh
_bitbank() {
  local cur cmd sub opts
  COMPREPLY=()
  cur="\${COMP_WORDS[COMP_CWORD]}"
  cmd="\${COMP_WORDS[1]:-}"
  sub="\${COMP_WORDS[2]:-}"

  local commands="active-orders assets candles circuit-break completion deposit-history deposit-originators depth margin-positions margin-status order orders-info pairs paper profile profiles schema status stream ticker tickers tickers-jpy trade trade-history trade-history-all transactions unconfirmed-deposits watch withdrawal-accounts withdrawal-history"
  local trade_subs="cancel-order cancel-orders confirm-deposits confirm-deposits-all create-order"
  local paper_subs="active-orders assets cancel-order create-order init pnl reset tick trade-history"
  local profile_subs="add list remove set-default show"
  local pairs="btc_jpy xrp_jpy eth_jpy doge_jpy sol_jpy ltc_jpy ada_jpy avax_jpy dot_jpy bnb_jpy sui_jpy link_jpy mona_jpy bcc_jpy xlm_jpy qtum_jpy bat_jpy omg_jpy xym_jpy boba_jpy enj_jpy astr_jpy axs_jpy flr_jpy sand_jpy gala_jpy ape_jpy chz_jpy oas_jpy mana_jpy grt_jpy dai_jpy op_jpy arb_jpy klay_jpy imx_jpy mask_jpy pol_jpy cyber_jpy render_jpy trx_jpy lpt_jpy atom_jpy sky_jpy"
  local formats="json table csv"
  local common_opts="--profile --format --help --machine --raw --log-file --no-log"
  local pair_cmds=" active-orders candles circuit-break depth margin-positions order orders-info ticker trade-history trade-history-all transactions "
  local pair_trade_subs=" cancel-order cancel-orders create-order "
  local pair_paper_subs=" create-order pnl tick "

  if [[ "$cur" == --format=* ]]; then
    COMPREPLY=( $(compgen -W "$formats" -- "\${cur#--format=}") )
    return
  fi
  if [[ "$cur" == --pair=* ]]; then
    COMPREPLY=( $(compgen -W "$pairs" -- "\${cur#--pair=}") )
    return
  fi

  if [[ $COMP_CWORD -eq 1 ]]; then
    COMPREPLY=( $(compgen -W "$commands" -- "$cur") )
    return
  fi

  if [[ "$cmd" == "trade" && $COMP_CWORD -eq 2 ]]; then
    COMPREPLY=( $(compgen -W "$trade_subs" -- "$cur") ); return
  fi
  if [[ "$cmd" == "paper" && $COMP_CWORD -eq 2 ]]; then
    COMPREPLY=( $(compgen -W "$paper_subs" -- "$cur") ); return
  fi
  if [[ "$cmd" == "profile" && $COMP_CWORD -eq 2 ]]; then
    COMPREPLY=( $(compgen -W "$profile_subs" -- "$cur") ); return
  fi
  if [[ "$cmd" == "completion" && $COMP_CWORD -eq 2 ]]; then
    COMPREPLY=( $(compgen -W "bash zsh" -- "$cur") ); return
  fi
  if [[ "$cmd" == "watch" && $COMP_CWORD -eq 2 ]]; then
    COMPREPLY=( $(compgen -W "ticker" -- "$cur") ); return
  fi
  if [[ "$cmd" == "watch" && $COMP_CWORD -eq 3 ]]; then
    COMPREPLY=( $(compgen -W "$pairs" -- "$cur") ); return
  fi

  if [[ "$cur" == --* ]]; then
    opts="$common_opts"
    if [[ "$cmd" == "trade" ]]; then
      case "$sub" in
        create-order) opts="$opts --pair --side --type --price --amount --trigger-price --post-only --execute --confirm" ;;
        cancel-order) opts="$opts --pair --order-id --execute --confirm" ;;
        cancel-orders) opts="$opts --pair --order-ids --execute --confirm" ;;
        confirm-deposits) opts="$opts --deposits --execute --confirm" ;;
        confirm-deposits-all) opts="$opts --originator-uuid --execute --confirm" ;;
      esac
    elif [[ "$cmd" == "paper" ]]; then
      case "$sub" in
        init) opts="$opts --jpy --force" ;;
        create-order) opts="$opts --pair --side --type --amount --price --refresh-pairs" ;;
        cancel-order) opts="$opts --id" ;;
        tick) opts="$opts --pair" ;;
        reset) opts="$opts --confirm" ;;
        pnl) opts="$opts --pair" ;;
      esac
    elif [[ "$cmd" == "profile" ]]; then
      case "$sub" in
        add) opts="$opts --description --default" ;;
        remove) opts="$opts --confirm" ;;
      esac
    else
      case "$cmd" in
        ticker) opts="$opts --pair" ;;
        depth) opts="$opts --pair" ;;
        transactions) opts="$opts --pair --date" ;;
        candles) opts="$opts --pair --type --date --limit --from --to --no-cache" ;;
        circuit-break) opts="$opts --pair" ;;
        assets) opts="$opts --all" ;;
        order) opts="$opts --pair --order-id" ;;
        orders-info) opts="$opts --pair --order-ids" ;;
        active-orders) opts="$opts --pair --count --since --end" ;;
        trade-history) opts="$opts --pair --count --order-id --since --end --order --all --max-pages" ;;
        trade-history-all) opts="$opts --pair --since --end --max-pages" ;;
        margin-positions) opts="$opts --pair" ;;
        deposit-history) opts="$opts --asset --count --since --end" ;;
        unconfirmed-deposits) opts="$opts --asset" ;;
        withdrawal-accounts) opts="$opts --asset" ;;
        withdrawal-history) opts="$opts --asset --count --since --end" ;;
        stream) opts="$opts --private --channel --filter" ;;
        watch) opts="$opts --duration --count --idle-timeout --max-retries --backoff-cap" ;;
      esac
    fi
    COMPREPLY=( $(compgen -W "$opts" -- "$cur") )
    return
  fi

  local is_pair=0
  if [[ "$cmd" == "trade" ]]; then
    case "$pair_trade_subs" in *" $sub "*) is_pair=1 ;; esac
  elif [[ "$cmd" == "paper" ]]; then
    case "$pair_paper_subs" in *" $sub "*) is_pair=1 ;; esac
  else
    case "$pair_cmds" in *" $cmd "*) is_pair=1 ;; esac
  fi
  if [[ $is_pair -eq 1 ]]; then
    COMPREPLY=( $(compgen -W "$pairs" -- "$cur") )
    return
  fi
}
complete -F _bitbank bitbank
"
`;

exports[`zsh completion script > matches snapshot for stability 1`] = `
"#compdef bitbank
# bitbank zsh completion. Generated by 'bitbank completion zsh'.
# Install: bitbank completion zsh > "\${fpath[1]}/_bitbank"
_bitbank() {
  local cur cmd sub opts
  cur="\${words[CURRENT]}"
  cmd="\${words[2]:-}"
  sub="\${words[3]:-}"

  local commands="active-orders assets candles circuit-break completion deposit-history deposit-originators depth margin-positions margin-status order orders-info pairs paper profile profiles schema status stream ticker tickers tickers-jpy trade trade-history trade-history-all transactions unconfirmed-deposits watch withdrawal-accounts withdrawal-history"
  local trade_subs="cancel-order cancel-orders confirm-deposits confirm-deposits-all create-order"
  local paper_subs="active-orders assets cancel-order create-order init pnl reset tick trade-history"
  local profile_subs="add list remove set-default show"
  local pairs="btc_jpy xrp_jpy eth_jpy doge_jpy sol_jpy ltc_jpy ada_jpy avax_jpy dot_jpy bnb_jpy sui_jpy link_jpy mona_jpy bcc_jpy xlm_jpy qtum_jpy bat_jpy omg_jpy xym_jpy boba_jpy enj_jpy astr_jpy axs_jpy flr_jpy sand_jpy gala_jpy ape_jpy chz_jpy oas_jpy mana_jpy grt_jpy dai_jpy op_jpy arb_jpy klay_jpy imx_jpy mask_jpy pol_jpy cyber_jpy render_jpy trx_jpy lpt_jpy atom_jpy sky_jpy"
  local formats="json table csv"
  local common_opts="--profile --format --help --machine --raw --log-file --no-log"
  local pair_cmds=" active-orders candles circuit-break depth margin-positions order orders-info ticker trade-history trade-history-all transactions "
  local pair_trade_subs=" cancel-order cancel-orders create-order "
  local pair_paper_subs=" create-order pnl tick "

  if [[ "$cur" == --format=* ]]; then
    compadd -- \${=formats}
    return
  fi
  if [[ "$cur" == --pair=* ]]; then
    compadd -- \${=pairs}
    return
  fi

  if (( CURRENT == 2 )); then
    compadd -- \${=commands}
    return
  fi

  if [[ "$cmd" == "trade" && CURRENT -eq 3 ]]; then
    compadd -- \${=trade_subs}; return
  fi
  if [[ "$cmd" == "paper" && CURRENT -eq 3 ]]; then
    compadd -- \${=paper_subs}; return
  fi
  if [[ "$cmd" == "profile" && CURRENT -eq 3 ]]; then
    compadd -- \${=profile_subs}; return
  fi
  if [[ "$cmd" == "completion" && CURRENT -eq 3 ]]; then
    compadd bash zsh; return
  fi
  if [[ "$cmd" == "watch" && CURRENT -eq 3 ]]; then
    compadd ticker; return
  fi
  if [[ "$cmd" == "watch" && CURRENT -eq 4 ]]; then
    compadd -- \${=pairs}; return
  fi

  if [[ "$cur" == --* ]]; then
    opts="$common_opts"
    if [[ "$cmd" == "trade" ]]; then
      case "$sub" in
      create-order) opts="$opts --pair --side --type --price --amount --trigger-price --post-only --execute --confirm" ;;
      cancel-order) opts="$opts --pair --order-id --execute --confirm" ;;
      cancel-orders) opts="$opts --pair --order-ids --execute --confirm" ;;
      confirm-deposits) opts="$opts --deposits --execute --confirm" ;;
      confirm-deposits-all) opts="$opts --originator-uuid --execute --confirm" ;;
      esac
    elif [[ "$cmd" == "paper" ]]; then
      case "$sub" in
      init) opts="$opts --jpy --force" ;;
      create-order) opts="$opts --pair --side --type --amount --price --refresh-pairs" ;;
      cancel-order) opts="$opts --id" ;;
      tick) opts="$opts --pair" ;;
      reset) opts="$opts --confirm" ;;
      pnl) opts="$opts --pair" ;;
      esac
    elif [[ "$cmd" == "profile" ]]; then
      case "$sub" in
      add) opts="$opts --description --default" ;;
      remove) opts="$opts --confirm" ;;
      esac
    else
      case "$cmd" in
      ticker) opts="$opts --pair" ;;
      depth) opts="$opts --pair" ;;
      transactions) opts="$opts --pair --date" ;;
      candles) opts="$opts --pair --type --date --limit --from --to --no-cache" ;;
      circuit-break) opts="$opts --pair" ;;
      assets) opts="$opts --all" ;;
      order) opts="$opts --pair --order-id" ;;
      orders-info) opts="$opts --pair --order-ids" ;;
      active-orders) opts="$opts --pair --count --since --end" ;;
      trade-history) opts="$opts --pair --count --order-id --since --end --order --all --max-pages" ;;
      trade-history-all) opts="$opts --pair --since --end --max-pages" ;;
      margin-positions) opts="$opts --pair" ;;
      deposit-history) opts="$opts --asset --count --since --end" ;;
      unconfirmed-deposits) opts="$opts --asset" ;;
      withdrawal-accounts) opts="$opts --asset" ;;
      withdrawal-history) opts="$opts --asset --count --since --end" ;;
      stream) opts="$opts --private --channel --filter" ;;
      watch) opts="$opts --duration --count --idle-timeout --max-retries --backoff-cap" ;;
      esac
    fi
    compadd -- \${=opts}
    return
  fi

  local is_pair=0
  if [[ "$cmd" == "trade" ]]; then
    [[ "$pair_trade_subs" == *" $sub "* ]] && is_pair=1
  elif [[ "$cmd" == "paper" ]]; then
    [[ "$pair_paper_subs" == *" $sub "* ]] && is_pair=1
  else
    [[ "$pair_cmds" == *" $cmd "* ]] && is_pair=1
  fi
  if (( is_pair == 1 )); then
    compadd -- \${=pairs}
    return
  fi
}
_bitbank "$@"
"
`;
